--- a/styles/about.css
+++ b/styles/about.css
@@ -174,6 +174,27 @@ section {
   }
 }
 
+
+.about .bg {
+  animation: slide 3s ease-in-out infinite alternate;
+  background-image: linear-gradient(-60deg, #ffefba 50%, #fff 50%);
+  bottom: 0;
+  left: -50%;
+  opacity: 0.5;
+  position: fixed;
+  right: -50%;
+  top: 0;
+  z-index: -1;
+}
+.about .bg2 {
+  animation-direction: alternate-reverse;
+  animation-duration: 4s;
+}
+.about .bg3 {
+  animation-duration: 5s;
+}
+
+
 @media (max-width: 412px) {
   .about{
     padding: 20px;
@@ -259,4 +280,57 @@ h3 {
   color: #00915a;
   font-size: .9em;
   text-decoration: underline; 
+}
+/* slide */
+.imgz{
+  margin-bottom: 20px;
+}
+.imgz{
+  width: 90%;
+  margin: 0 5%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.imgz img {
+  width: 25%;
+  height: fit-content;
+}
+.images .imgz:first-child img:nth-child(2) {
+  display: block;
+  width: 25%;
+  object-fit: fill;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.head-h2 {
+  margin: 40px auto;
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 40px;
+  font-weight: bold;
+  color:  #FFD700;;
+  text-align: left;
+  letter-spacing: 1px;
+  text-shadow: 3px 4px 7px rgba(81,67,21,0.8);
+}
+
+
+@media (max-width: 620px) {
+  .imgz{
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .imgz img {
+    width: 90%;
+    margin: 0 5%;
+    object-fit: cover;
+  }
+  .images .imgz:first-child img:nth-child(2) {
+    display: none;
+  }
+  .head-h2{
+    margin: 30px auto;
+  }
 }
