--- a/styles/poems.css
+++ b/styles/poems.css
@@ -32,6 +32,7 @@ body {
   cursor: pointer;
 }
 .poems div {
+  display: block;
   padding: auto;
   width: 30%;
   aspect-ratio: 1/1.3;
@@ -78,6 +79,9 @@ body {
     width: 90%;
     margin: 0 auto 60px;
     margin-bottom: 20px;
+  }
+  .poems div {
+    display: none;
   }
 }
 
